2013-03-11  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Added HTTP redirect
	 support. It fixes an issue that update manager behind http proxy
	 failed to communicate with update server due to the server's
	 "301 Moved Permanently" HTTP response.

	Merged from: branch_4.0

2013-03-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: added event when some
	user stop a downtime manuallity.
	
	Fixes: #3607163

2013-03-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php, include/functions_reporting.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/reporting/reporting_builder.php: into the report element
	"exception" added more conditions and rewrote the code.
	
	Fixes: #3607172

2013-03-08  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/events.php
	include/graphs/flot/pandora.flot.js: Improve the view
	of events information in flot graphs for bug 3607101

	* godmode/agentes/module_manager_editor_network.php
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_network.php: Fix
	some bugs of module templates application and snmp modules edition

2013-03-07 Mario Pulido <mario.pulido@artica.es>

       *images/help/historyddbb.png,images/help/plugin1.png
       images/help/plugin2.png, images/help/plugin3.png
       include/help/es/help_plugin_definition.php
       include/help/es/help_history_database.php
       include/help/en/help_history_database.php
       include/help/en/help_plugin_definition.php: Modified plugin definition help.
       Add history database help.



2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.oracle.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,