@@ -1,3 +1,12 @@
+2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/module_manager_editor_common.php: show only the
+	tags that the user has.
+	
+	Fixes: #3607617
+	
+	* include/functions_tags.php: cleaned source code style.
+
 2013-03-11  Kikuchi Koichiro <koichiro@rworks.jp>
 
 	* extensions/update_manager/lib/libupdate_manager_client.php,
